--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-table-pagination-example",
+  "name": "pomelo-cc-frontend",
   "version": "0.1.0",
-  "private": true,
+  "author": "Dheeraj Sharma",
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.3",
